--- a/app/users/templates/registration/login.html
+++ b/app/users/templates/registration/login.html
@@ -10,7 +10,8 @@ body {
 
 form {
     background-color: rgb(248,249,250);
-    padding-top: 10%;
+    padding-top: 2rem;
+    padding-bottom: 10rem;
     border: 3px solid rgb(248,249,250);
     width: 500px; /* Set the width of the form */
     margin: 0 auto; /* Center the form horizontally */
@@ -25,7 +26,7 @@ input[type=text], input[type=password] {
   box-sizing: border-box;
 }
 
-button {
+input[type=submit] {
   background-color: #0852f4;
   color: white;
   padding: 14px 20px;
@@ -55,24 +56,8 @@ span.psw {
 <body>
 <form method="post">
     {% csrf_token %}
-    <h2 style="text-align: center;">Blast</h2>
-
-    <div class="container">
-        <label for="uname"><b>Username</b></label>
-        <input type="text" placeholder="Enter Username" name="uname" required>
-
-        <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
-
-        <button type="submit">Login</button>
-    </div>
-
-    <div class="container" style="background-color:rgb(248,249,250)">
-        <label>
-        <input type="checkbox" checked="checked" name="remember"> Remember me
-        </label>
-        <span class="psw">Forgot <a href="#">password?</a></span>
-        </div>
+    {{ form }}
+    <input type="submit" value="Login"></input>
 </form>
 </body>
 {% endblock %}
