--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -2,130 +2,123 @@
 <html lang="en">
 
 <head>
-    <title>{% block title %}{% endblock %}</title>
-    <!-- Bokeh -->
-    <!-- <link rel="stylesheet" href="https://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.css" type="text/css" crossorigin="anonymous"/> -->
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />-->
-
-    <script type="text/javascript" src="https://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.js" crossorigin="anonymous"></script>
-    <!-- Boostrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- Icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <style>
-        body {
-            margin-bottom: 5%;
-            border-radius: 5px;
-	    font-size: 12pt;
-        }
-        footer {
-            position: fixed;
-            padding: 20px;
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            background-color: white;
-            color: white;
-            text-align: center;
-        }
-	.navbar
-	{
-	    font-size: 12pt;
-	}
-    </style>
+  <title>{% block title %}{% endblock %}</title>
+  <!-- Bokeh -->
+  <script type="text/javascript" src="https://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.js" crossorigin="anonymous"></script>
+  <!-- Boostrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+  <style>
+  body {
+    margin-bottom: 5%;
+    border-radius: 5px;
+    font-size: 12pt;
+  }
+  footer {
+    position: fixed;
+    padding: 20px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: white;
+    color: white;
+    text-align: center;
+  }
+  .navbar {
+    font-size: 12pt;
+  }
+  </style>
 
 </head>
 
 <body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark font-size-xlg">
-        <div class="container">
-          <a class="navbar-brand" href="#">
-	    Blast <font color='red' style="border-width:3px; border-style:solid; border-color:#FF0000; padding: 0.1em; border-radius:10px">Beta</font>
-	  </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/"><i class="bi bi-house-door-fill"></i> Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="/transients"><i class="bi bi-search"></i> Transients</a>
-                    </li>
-                    <!--<li class="nav-item">
-                            <a class="nav-link" href="/analytics">Analytics</a>
-                        </li>-->
-                    <li class="nav-item">
-                        <a class="nav-link" href="/acknowledgements"><i class="bi bi-mortarboard-fill"></i>
-                            Acknowledgements</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://blast.readthedocs.io/en/latest/">
-                            <i class="bi bi-book-half"></i> Docs
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/astrophpeter/blast">
-                            <i class="bi-github" role="img" aria-label="GitHub"></i>
-                        </a>
-                    </li>
-                        {% if user.is_authenticated %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="/transient_uploads"> Uploads </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"> Logged in as {{ user.username }} </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/accounts/logout"><i class="bi bi-box-arrow-left"></i> Logout </a>
-                            </li>
-                    {% else %}
-                    <li class="nav-item">
-                            <a class="nav-link" href="/accounts/login">
-                                <i class="bi bi-box-arrow-in-right"></i> Login
-                            </a>
-                            </li>
-                    {% endif %}
-
-                </ul>
-
-</div>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container bg-light">
-        {% block body %}
-        {% endblock %}
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark font-size-xlg">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        Blast <font color='red' style="border-width:3px; border-style:solid; border-color:#FF0000; padding: 0.1em; border-radius:10px">Beta</font>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav align-items-center">
+          <li class="nav-item">
+            <a class="nav-link" href="/"><i class="bi bi-house-door-fill"></i> Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/transients"><i class="bi bi-search"></i> Transients</a>
+          </li>
+          <!--<li class="nav-item">
+              <a class="nav-link" href="/analytics">Analytics</a>
+            </li>-->
+          <li class="nav-item">
+            <a class="nav-link" href="/acknowledgements"><i class="bi bi-mortarboard-fill"></i>
+              Acknowledgements</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://blast.readthedocs.io/en/latest/">
+              <i class="bi bi-book-half"></i> Docs
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/astrophpeter/blast">
+              <i class="bi-github" role="img" aria-label="GitHub"></i>
+            </a>
+          </li>
+          {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="/transient_uploads"> Uploads </a>
+          </li>
+          <form action="{% url 'logout' %}" method="post">
+            {% csrf_token %}
+            <li class="nav-item">
+              <button type="submit" class="btn-link nav-link">
+                <i class="bi bi-box-arrow-left"></i> Log out ({{ user.username }})
+              </button>
+            </li>
+          </form>
+          {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="/accounts/login">
+              <i class="bi bi-box-arrow-in-right"></i> Login
+            </a>
+          </li>
+          {% endif %}
+        </ul>
+      </div>
     </div>
+  </nav>
 
-    <footer class="footer py-3 bg-light">
-        <div class="container">
-            <span class="text-muted">Report bugs and issues on Github
-                <a href="https://github.com/astrophpeter/blast/issues">here</a>
+  <div class="container bg-light">
+    {% block body %}
+    {% endblock %}
+  </div>
 
-                <span style="margin-left:2px"><span class="text-muted">| UCSC Transient team web pages
-                        <a href="https://transients.ucsc.edu/">here</a>
+  <footer class="footer py-3 bg-light">
+    <div class="container">
+      <span class="text-muted">Report bugs and issues on Github
+        <a href="https://github.com/astrophpeter/blast/issues">here</a>
 
-                    </span>
-        </div>
+        <span style="margin-left:2px">
+          <span class="text-muted">| UCSC Transient team web pages
+            <a href="https://transients.ucsc.edu/">here</a>
+          </span>
+        </span>
+      </span>
+    </div>
+  </footer>
 
-
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-        <script type="text/javascript" src="https://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.js"
-        integrity="sha384-qAE24rLAti3FnBClHlngWsDQZs6St9M7tNWdrWQeAWrtAEQTwCaNu9EIE716mUUp"
-        crossorigin="anonymous"></script>
-        {% block script %}{% endblock %}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.js"
+    integrity="sha384-qAE24rLAti3FnBClHlngWsDQZs6St9M7tNWdrWQeAWrtAEQTwCaNu9EIE716mUUp"
+    crossorigin="anonymous"></script>
+  {% block script %}{% endblock %}
 </body>
-
 </html>
