--- a/app/host/templates/host/sed_card.html
+++ b/app/host/templates/host/sed_card.html
@@ -7,10 +7,10 @@
 
 <ul class="nav nav-tabs card-header-tabs" id="myTab-sed" role="tablist">
     <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="global-sed-tab" data-bs-toggle="tab" data-bs-target="#global-sed" type="button" role="tab" aria-controls="global-sed" aria-selected="false">Global</button>
+        <button class="nav-link active" id="global-sed-tab" data-toggle="tab" data-target="#global-sed" type="button" role="tab" aria-controls="global-sed" aria-selected="false">Global</button>
     </li>
     <li class="nav-item" role="presentation">
-        <button class="nav-link" id="local-sed-tab" data-bs-toggle="tab" data-bs-target="#local-sed" type="button" role="tab" aria-controls="local-sed" aria-selected="true">Local</button>
+        <button class="nav-link" id="local-sed-tab" data-toggle="tab" data-target="#local-sed" type="button" role="tab" aria-controls="local-sed" aria-selected="true">Local</button>
     </li>
 </ul>
 
