--- a/app/host/templates/host/sed_inference_card.html
+++ b/app/host/templates/host/sed_inference_card.html
@@ -7,10 +7,10 @@
 <h4>Host SED inference</h4>
 <ul class="nav nav-tabs card-header-tabs" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="global-params-tab" data-bs-toggle="tab" data-bs-target="#global-params" type="button" role="tab" aria-controls="global-params" aria-selected="false">Global</button>
+        <button class="nav-link active" id="global-params-tab" data-toggle="tab" data-target="#global-params" type="button" role="tab" aria-controls="global-params" aria-selected="false">Global</button>
     </li>
     <li class="nav-item" role="presentation">
-        <button class="nav-link" id="local-params-tab" data-bs-toggle="tab" data-bs-target="#local-params" type="button" role="tab" aria-controls="local-params" aria-selected="true">Local</button>
+        <button class="nav-link" id="local-params-tab" data-toggle="tab" data-target="#local-params" type="button" role="tab" aria-controls="local-params" aria-selected="true">Local</button>
     </li>
 </ul>
 
